# cxxendian

./: CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: cmake.yml
include/: CMakeLists.txt  cxxendian.hpp
include/cxxendian/: base_float.hpp  base_int.hpp  float.hpp  float_operators.hpp  int.hpp  int_operators.hpp
src/: CMakeLists.txt  cf_dummy.cpp
test/: CMakeLists.txt  endiannes_test.cpp
